[tool.poetry]
name = "py-eicar"
version = "0.1.0"
description = "pypi eicar for testing"
authors = ["matthew.gill <matthew.gill@servicenow.com>"]
license = "UNLICENSE"
readme = "README.md"
repository = "https://github.com/vetsin/py-eicar"
packages = [{include = "py_eicar"}]

[tool.poetry.dependencies]
python = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
